libs/fleet/sdk-bindings/swift/CyclopsSdkFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
uint64_t uniffi_cyclops_sdk_fn_clone_accesstokenprovider(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_accesstokenprovider(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_createclaimrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_createclaimrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_createpoolrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_createpoolrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_createsignedserviceurlrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_createsignedserviceurlrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_createtemplaterequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_cyclops_sdk_rustbuffer_alloc(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_cyclops_sdk_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_cyclops_sdk_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_u8(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_cyclops_sdk_rust_future_complete_u8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_i8(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_i8(uint64_t handle
);
int8_t ffi_cyclops_sdk_rust_future_complete_i8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_u16(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_cyclops_sdk_rust_future_complete_u16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_i16(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_i16(uint64_t handle
);
int16_t ffi_cyclops_sdk_rust_future_complete_i16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_u32(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_cyclops_sdk_rust_future_complete_u32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_i32(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_i32(uint64_t handle
);
int32_t ffi_cyclops_sdk_rust_future_complete_i32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_u64(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_cyclops_sdk_rust_future_complete_u64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_i64(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_i64(uint64_t handle
);
int64_t ffi_cyclops_sdk_rust_future_complete_i64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_f32(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_f32(uint64_t handle
);
float ffi_cyclops_sdk_rust_future_complete_f32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_f64(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_f64(uint64_t handle
);
double ffi_cyclops_sdk_rust_future_complete_f64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_cyclops_sdk_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_void(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_void(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_complete_void(uint64_t handle, RustCallStatus *_Nonnull out_status
);